# Field3DMayaPlugin

./: .gitignore  CMakeLists.txt  COPYING  README
src/: field3D_Format.cpp  field3D_Format.h  field3D_Tools.cpp  field3D_Tools.h  maya_Tools.cpp  maya_Tools.h  plugin.cpp  plugin.h  tinyLogger.cpp  tinyLogger.h
